[package]
name = "memq"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
confy = "1.0.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.5"
